--- a/content/blog/2018-06-18-kelly-criterion.Rmd
+++ b/content/blog/2018-06-18-kelly-criterion.Rmd
@@ -10,7 +10,7 @@ categories: statistics
 
 I enjoyed looking at the probabilistic model of world cup matches over at [fivethirtyeight](https://projects.fivethirtyeight.com/2018-world-cup-predictions/matches/) and was wondering how one would fare in terms of sports betting using the predictions from Nate Silver and Jay Boice. As a disclaimer: I did not bet any money at all, all of the below is purely theoretical.
 
-So here is what I did: for each game, I pulled the winning probabilities from fivethirtyeight and the corresponding odds from online bookmakers. Since bookmakers constantly update their odds (in order to have an edge over bettors), I always pulled both probabilities and odds, the night before the match. With that in hand, I simulated the following betting strategy. The bettor starts with a bankroll of $100 and then bets according to the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion) for each bet. 
+So here is what I did: for each game, I pulled the winning probabilities from fivethirtyeight and the corresponding odds from online bookmakers. Since bookmakers constantly update their odds (in order to have an edge over bettors), I always pulled both probabilities and odds, the night before the match. With that in hand, I simulated three different betting stratgies, who all start out with \$100: first, a bettor who always chooses the favorite to win, and always bets exactly \$10. The second strategy is a contrarian bettor who always chooses the least likely outcome, which typically means betting on the underdog, but with high odds, and always uses a \$10 bet. Lastly, I will simulate a bettor that looks at all probabilties, and odds, and then uses the [Kelly criterion](https://en.wikipedia.org/wiki/Kelly_criterion) for each bet. 
 
 The Kelly criterion is a method to determine how much one should wager on a bet, given assumed winning probabilities, and offered odds. Kelly betting maximizes logarithmic utility. Below is a graphic display showing the Kelly criterion. On the x-axis are the probabilities that you assume an event is going to take place, and on the y-axis are the offered odds (these odds can be translated into implied probabilities of the bookie). The shading for each part of the graph shows what percentage of your current bankroll you should bet. As an example, if you believe the probability of an event to happen is close to 100% (right side of the graph), then you typically end up betting a lot (or all) of your bankroll (the yellow region of the graph). For events in which the implied probabilities of the bookie are larger than your own, you end up not betting at all - notice that this area is quite large in the graph. 
 
@@ -58,10 +58,9 @@ ggplot(grid2, aes(prob, aprob, z = kelley)) +
 
 An interesting observation with respect to the World Cup games was that for many matches the Kelly criterion suggested not betting at all, especially not betting on the stronger team. This indicated that the offered odds from bookies generally tended to overestimate the winning probability (or maybe 538 underestimated the performance of strong teams). I should also add that I did not use the generalized Kelly criterion to distinguish the best bet between either team winning or a draw. I simply (and incorrectly) computed the Kelly bet for each outcome separately, and thus on occasion ended up with two outcomes that received a wager. 
 
-Below I am showing a linegraph that shows how the initial bankroll of $100 developed after each game. The y-axis shows relative bankroll (that means it simply tallies wins and losses). The bars at the bottom of the graph show how much was won or lost in each bet, and the size of the point indicates the amount of total stake that was wagered on each game. As an example, when Sweden and South Korea were playing, the Kelly criterion suggested a somewhat large bet on Sweden, which paid off, as indicated as the big green bar. On the other hand, in the game Brazil vs Switzerland, the Kelly criterion suggest moderate bets on Switzerland, and on a draw. The bet on Switzerland was lost, but the bet on the draw was won, resulting in a net win for this game. 
+Below I am showing a linegraph that shows how the initial bankroll of \$100 developed after each game. The y-axis shows relative bankroll (that means it simply tallies wins and losses and sets the zero point at the intial bankroll of \$100). The bars at the bottom of the graph show how much was won or lost in each bet, and the size of the point indicates the amount of total stake that was wagered on each game. 
 
-I will update this blog as the world cup progresses, but at this point, it's fair to say that this particular betting scheme is doing quite well. 
-
+First, let's have a look at the person who always bets on the favorite. 
 
 ```{r, message=FALSE,warning=FALSE, echo=FALSE}
 library(ggplot2)
@@ -71,14 +70,66 @@ library(readxl)
 library(dplyr)
 library(magrittr)
 
+
+g <- 48
+
+#maxprob
+wcb2 <- read_xlsx("C:\\Users\\fjt36-admin\\Dropbox\\WORK\\2018 Winter Cornell\\kellybettingwc.xlsx")
+wcb2 <- wcb2 %>% mutate(posneg = factor(ifelse(wcb2$Betmaxnet<0,"negative","positive"))) %>%  select(ID,Title,Betmaxnet,Bankrollbetmaxplot,posneg) %>% slice(1:g)
+
+wcb2$Title <- reorder(factor(wcb2$Title),wcb2$ID)
+
+#max betting
+ggplot(wcb2,aes(x=Title,y=Bankrollbetmaxplot-100)) + geom_point() + geom_line(group=1) + theme(axis.text.x = element_text(angle=45,margin=margin(t=0,r=0,b=0,l=0),hjust=1)) +  geom_bar(data=wcb2,aes(x=Title,y=Betmaxnet,fill=posneg),stat="identity",alpha=.2,width=.2) + scale_fill_manual(values=c("negative"="firebrick","positive"="darkgreen")) + ylab("Relative bankroll") +theme(axis.title.x=element_blank()) + guides(fill=FALSE,size=FALSE) + coord_cartesian(ylim=c(-100,200))
+```
+We can see that basically two things happen: either the bettor loses the intial stake (which is always /$10), or wins a modest amount (since odds for favorites are tpyically not very high). After the group stage this bettor still has managed to accumulate winnings of about \$50. 
+
+Comparing this with the contrarian bettor, we see a very different picture. This bettor is almost always losing the intital stake, and rarley wins. However the wins tend to be big. The largest gain was realized in the upset of South Korea over Germany. Without that single game, this bettor may be very close to bankruptcy already. 
+
+```{r, message=FALSE,warning=FALSE, echo=FALSE}
+library(ggplot2)
+library(viridis)
+library(ggthemes)
+library(readxl)
+library(dplyr)
+library(magrittr)
+
+
+g <- 48
+
+
+#minprob
+wcb3 <- read_xlsx("C:\\Users\\fjt36-admin\\Dropbox\\WORK\\2018 Winter Cornell\\kellybettingwc.xlsx")
+wcb3 <- wcb3 %>% mutate(posneg = factor(ifelse(wcb3$Betminnet<0,"negative","positive"))) %>%  select(ID,Title,Betminnet,Bankrollbetminplot,posneg) %>% slice(1:g)
+
+wcb3$Title <- reorder(factor(wcb3$Title),wcb3$ID)
+
+#min betting
+ggplot(wcb3,aes(x=Title,y=Bankrollbetminplot-100)) + geom_point() + geom_line(group=1) + theme(axis.text.x = element_text(angle=45,margin=margin(t=0,r=0,b=0,l=0),hjust=1)) +  geom_bar(data=wcb3,aes(x=Title,y=Betminnet,fill=posneg),stat="identity",alpha=.2,width=.2) + scale_fill_manual(values=c("negative"="firebrick","positive"="darkgreen")) + ylab("Relative bankroll") +theme(axis.title.x=element_blank()) + guides(fill=FALSE,size=FALSE) + coord_cartesian(ylim=c(-100,200))
+```
+
+Finally, we look at the Kelly bettor, who only bets when the assumed probability of an outcome is higher than the implied probability of the bookmaker. This leads sometimes to bets on the favorite, but often on the underdog. In many instances, it also leads to not betting at all, or only using very small bets. 
+
+```{r, message=FALSE,warning=FALSE, echo=FALSE}
+library(ggplot2)
+library(viridis)
+library(ggthemes)
+library(readxl)
+library(dplyr)
+library(magrittr)
+
+g <- 48
+
 wcb <- read_xlsx("C:\\Users\\fjt36-admin\\Dropbox\\WORK\\2018 Winter Cornell\\kellybettingwc.xlsx")
-wcb <- wcb %>% mutate(posneg = factor(ifelse(wcb$`Total net`<0,"negative","positive"))) %>%  select(ID,Title,"Total net","Total stake",Bankrollkellyplot,posneg) %>% slice(1:42)
+wcb <- wcb %>% mutate(posneg = factor(ifelse(wcb$`Total net`<0,"negative","positive"))) %>%  select(ID,Title,"Total net","Total stake",Bankrollkellyplot,posneg) %>% slice(1:g)
 
 wcb$Title <- reorder(factor(wcb$Title),wcb$ID)
 
-ggplot(wcb,aes(x=Title,y=Bankrollkellyplot-100)) + geom_point(aes(size=`Total stake`)) + geom_line(group=1) + theme(axis.text.x = element_text(angle=45,margin=margin(t=0,r=0,b=0,l=0),hjust=1)) +  geom_bar(data=wcb,aes(x=Title,y=`Total net`,fill=posneg),stat="identity",alpha=.2,width=.2) + scale_fill_manual(values=c("negative"="firebrick","positive"="darkgreen")) + ylab("Relative bankroll") +theme(axis.title.x=element_blank()) + guides(fill=FALSE,size=FALSE)
+#kelly betting
+ggplot(wcb,aes(x=Title,y=Bankrollkellyplot-100)) + geom_point(aes(size=`Total stake`)) + geom_line(group=1) + theme(axis.text.x = element_text(angle=45,margin=margin(t=0,r=0,b=0,l=0),hjust=1)) +  geom_bar(data=wcb,aes(x=Title,y=`Total net`,fill=posneg),stat="identity",alpha=.2,width=.2) + scale_fill_manual(values=c("negative"="firebrick","positive"="darkgreen")) + ylab("Relative bankroll") +theme(axis.title.x=element_blank()) + guides(fill=FALSE,size=FALSE) + coord_cartesian(ylim=c(-100,200))
 ```
 
+The Kelly bettor realized the largest winnings from all three strategies by a wide margin. At the end of the group stage, the Kelly bettor accumulated about /$150 of winnnings, meaning a current bankroll of about \$250, starting with an intial bankroll of \$100. It will be intersting to see how this developed in the knock-out stage. 
 
 
 ###R code to replicate results and graphs
